--- a/WebContent/styles/database-search.css
+++ b/WebContent/styles/database-search.css
@@ -99,16 +99,23 @@ td.legend-table-detail-col2 {
 }
 
 div.map-legend-div {
-	padding-top: 10px;
-	padding-left: 10px;
-	vertical-align: top;
+	}
 	
-}
+div.map-legend-section-title {
+	font-weight: bold;
+	padding-bottom: 2px; }
+
+div.map-legend-section {
+	background-color: #F3E4BA;
+	border-top: 1px solid #895D03;
+	padding-bottom: 5px;
+	margin-bottom: 10px;
+	padding-top: 5px;
+	padding-left: 5px;
+	padding-right: 10px; }
 
 input.map-legend-refresh {
-	margin-top: 10px;
-	margin-left: 10px;
-}
+	margin-top: 10px; }
 
 table.legend-table-layers {
 	padding-left: 10px;
