--- a/WebContent/styles/database-search.css
+++ b/WebContent/styles/database-search.css
@@ -102,20 +102,23 @@ div.map-legend-div {
 	}
 	
 div.map-legend-section-title {
+	background-color: #F2E3B8;
 	font-weight: bold;
-	padding-bottom: 2px; }
+	padding-bottom: 2px;
+	padding-top: 2px;
+	padding-left: 5px;
+	padding-right: 10px;
+	border-bottom: 0px solid #895D03; }
 
 div.map-legend-section {
-	background-color: #F3E4BA;
-	border-top: 1px solid #895D03;
-	padding-bottom: 5px;
 	margin-bottom: 10px;
+	padding-bottom: 5px;
 	padding-top: 5px;
 	padding-left: 5px;
 	padding-right: 10px; }
 
 input.map-legend-refresh {
-	margin-top: 10px; }
+	margin-top: 0px; }
 
 table.legend-table-layers {
 	padding-left: 10px;
