*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@752 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/images.css
+++ b/WebContent/styles/images.css
@@ -87,3 +87,7 @@ table.image-detail-info td {
 div.image-detail-info-label {
 	margin-right: 10px; 
 	font-style: italic; }
+	
+div.images-query {
+	border-bottom: 1px solid #165B31;
+	margin-bottom: 15px; }
