*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@769 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/resources-slaves.css
+++ b/WebContent/styles/resources-slaves.css
@@ -1,9 +1,12 @@
 td.td-main-panel {
 	vertical-align: top; 
-	background-image: url(../images/resources-bg.png);
+	background-image: none;
 	padding: 10px; }
 	
 td.td-side-panel {
+	background-image: url(../images/resources-bg.png);
+	background-repeat: repeat-x;
+	
 	width: 280px; 
 	vertical-align: top;
 	border-right: 1px solid #165B31; }
