--- a/WebContent/styles/resources-expandable-box.css
+++ b/WebContent/styles/resources-expandable-box.css
@@ -1,4 +1,6 @@
-table.box-main-table td {
+table.box-main-table td.box-middle-row-right,
+table.box-main-table td.box-lower-row-middle,
+table.box-main-table td.box-middle-row-left {
 	border-color: #165B31; }
 		
 td.box-upper-row-left {
@@ -43,3 +45,55 @@ div.box-button {
 	
 td.box-label {
 	color: White; }
+
+/*
+
+table.box-main-table td.box-middle-row-right,
+table.box-main-table td.box-lower-row-middle,
+table.box-main-table td.box-middle-row-left {
+	border-color: #5A636B; }
+		
+td.box-upper-row-left {
+	background-image: url(../images/about-box-light-expanded-title-left.png); }
+	
+td.box-upper-row-left-collapsed {
+	background-image: url(../images/about-box-light-collapsed-title-left.png); }
+
+td.box-upper-row-middle,
+td.box-upper-row-middle-collapsed {
+	background-image: url(../images/about-box-light-title-center.png); }
+
+td.box-upper-row-right {
+	background-image: url(../images/about-box-light-expanded-title-right.png); }
+	
+td.box-upper-row-right-collapsed {
+	background-image: url(../images/about-box-light-collapsed-title-right.png); }
+
+td.box-middle-row-left {
+	background-image: url(../images/about-box-content-center.png); }
+	
+td.box-middle-row-middle {
+	background-image: url(../images/about-box-content-center.png); }
+	
+td.box-middle-row-right {
+	background-image: url(../images/about-box-content-center.png); }
+
+td.box-lower-row-left {
+	background-image: url(../images/about-box-bottom-left.png); }
+		
+td.box-lower-row-middle {
+	 }
+	
+td.box-lower-row-right {
+	background-image: url(../images/about-box-bottom-right.png); }
+
+div.box-button-collapsed {
+	background-image: url(../images/about-box-plus.png); }
+
+div.box-button {
+	background-image: url(../images/about-box-minus.png); }
+	
+div.box-label {
+	color: White; }
+
+*/
