--- a/WebContent/styles/resources.css
+++ b/WebContent/styles/resources.css
@@ -1,4 +1,3 @@
-	
 div#content {
 	border-top: 5px solid #165B31; }
 	
@@ -13,3 +12,22 @@ div.section-index-intro-icon-title {
 	
 a {
 	color: #165B31; }
+
+/*
+
+div#content {
+	border-top: 5px solid #596169; }
+	
+td.section-index-right-column {
+	border-left-color: #596169; }
+	
+div.section-index-intro-blank-icon {
+	background-image: url(../images/about-index-icon.png); }
+	
+div.section-index-intro-icon-title {
+	color: #596169; }
+	
+a {
+	color: #596169; }
+	
+*/
