*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@774 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/resources-images.css
+++ b/WebContent/styles/resources-images.css
@@ -68,7 +68,8 @@ div.gallery-image-description {
 a.link-images {
 	}
 	
-img.image {
+img.image-detail {
+	cursor: pointer;
 	border: 1px solid #165B31; }
 	
 div.image-title {
@@ -111,7 +112,7 @@ table.image-navigation a {
 	
 table.image-navigation a:hover {
 	background-color: White; }
-	
+
 /*
 
 body {
