--- a/WebContent/styles/expandable-box.css
+++ b/WebContent/styles/expandable-box.css
@@ -1,5 +1,5 @@
-td.box-upper-row-left,
-td.box-upper-row-left-collapsed {
+td.box-upper-row-left, td.box-set-upper-row-upper-left, td.box-set-upper-row-middle-left, td.box-set-upper-row-bottom-left,
+td.box-upper-row-left-collapsed, td.box-set-upper-row-upper-left-collapsed, td.box-set-upper-row-middle-left-collapsed, td.box-set-upper-row-bottom-left-collapsed {
 	height: 26px;
 	width: 10px;
 	background-position: left top;
@@ -7,14 +7,20 @@ td.box-upper-row-left-collapsed {
 	overflow: hidden; }
 	
 td.box-upper-row-middle,
-td.box-upper-row-middle-collapsed {
+td.box-upper-row-middle-collapsed,
+td.box-set-upper-row-upper-middle-collapsed,
+td.box-set-upper-row-upper-middle, 
+td.box-set-upper-row-middle-middle-collapsed,
+td.box-set-upper-row-middle-middle, 
+td.box-set-upper-row-bottom-middle-collapsed,
+td.box-set-upper-row-bottom-middle {
 	height: 26px;
 	padding-top: 5px;
 	padding-bottom: 4px;
 	background-repeat: repeat-x; }
 
-td.box-upper-row-right, 
-td.box-upper-row-right-collapsed {
+td.box-upper-row-right, td.box-set-upper-row-upper-right, td.box-set-upper-row-middle-right, td.box-set-upper-row-bottom-right, 
+td.box-upper-row-right-collapsed, td.box-set-upper-row-upper-right-collapsed, td.box-set-upper-row-middle-right-collapsed, td.box-set-upper-row-bottom-right-collapsed {
 	height: 26px;
 	width: 10px;
 	background-position: right top;
@@ -43,19 +49,21 @@ td.box-middle-row-right {
 	border-right-style: solid;
 	overflow: hidden; }
 
-td.box-lower-row-left {
+td.box-lower-row-left, td.box-set-lower-row-upper-left, td.box-set-lower-row-middle-left, td.box-set-lower-row-bottom-left {
 	background-position: left bottom;
 	background-repeat: no-repeat;
 	width: 10px;
 	height: 10px;
 	overflow: hidden; }
 	
-td.box-lower-row-middle {
+td.box-lower-row-middle,td.box-set-lower-row-bottom-middle {
 	background-color: White;
 	border-bottom-width: 1px;
 	border-bottom-style: solid; }
-
-td.box-lower-row-right {
+td.box-set-lower-row-upper-middle, td.box-set-lower-row-middle-middle {
+	background-color: White;}
+	
+td.box-lower-row-right, td.box-set-lower-row-upper-right, td.box-set-lower-row-middle-right, td.box-set-lower-row-bottom-right {
 	background-position: right top;
 	background-repeat: no-repeat;
 	width: 10px;
