*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@781 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/expandable-box.css
+++ b/WebContent/styles/expandable-box.css
@@ -1,3 +1,6 @@
+table.box-main-table {
+	border-collapse: collapse; }
+
 td.box-upper-row-left, td.box-set-upper-row-upper-left, td.box-set-upper-row-middle-left, td.box-set-upper-row-bottom-left,
 td.box-upper-row-left-collapsed, td.box-set-upper-row-upper-left-collapsed, td.box-set-upper-row-middle-left-collapsed, td.box-set-upper-row-bottom-left-collapsed {
 	height: 26px;
@@ -14,7 +17,7 @@ td.box-set-upper-row-middle-middle-collapsed,
 td.box-set-upper-row-middle-middle, 
 td.box-set-upper-row-bottom-middle-collapsed,
 td.box-set-upper-row-bottom-middle {
-	height: 26px;
+	
 	padding-top: 5px;
 	padding-bottom: 4px;
 	background-repeat: repeat-x; }
