--- a/WebContent/styles/resources-slaves.css
+++ b/WebContent/styles/resources-slaves.css
@@ -27,12 +27,16 @@ td.lookup-checkbox-list-item-2 {
 div.slaves-query-section {
 	margin-bottom: 10px;
 	padding-bottom: 10px;
-	border-bottom: 1px solid #B4D6CD; }
+	border-bottom: 1px solid #B4D6CD;}
 
-td.box-upper-row-middle {
-	width: 250px; }
-
-td.box-upper-row-middle-collapsed {
+td.box-upper-row-middle,
+td.box-upper-row-middle-collapsed,
+td.td-side-panel td.box-set-upper-row-upper-middle-collapsed,
+td.td-side-panel td.box-set-upper-row-upper-middle, 
+td.td-side-panel td.box-set-upper-row-middle-middle-collapsed,
+td.td-side-panel td.box-set-upper-row-middle-middle, 
+td.td-side-panel td.box-set-upper-row-bottom-middle-collapsed,
+td.td-side-panel td.box-set-upper-row-bottom-middle {	
 	width: 250px; }
 	
 td.lookup-checkbox-list-quicksearch {
@@ -49,7 +53,7 @@ div.lookup-checkbox-list {
 	/* background-color: #DCEFE7; */
 	margin-top: 5px;
 	padding: 3px;
-	width: 220px;
+	width: 200px;
 	height: 200px;
 	overflow: scroll; }
 
