*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@791 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/resources-slaves.css
+++ b/WebContent/styles/resources-slaves.css
@@ -74,3 +74,14 @@ div.lookup-checkbox-list-item-expanded {
 	background-repeat: no-repeat;
 	width: 11px;
 	height: 11px; }
+	
+div.query-summary-item {
+	border-bottom: 1px solid #B4D6CD;
+	padding-bottom: 5px;
+	margin-bottom: 5px; }
+	
+div.query-summary-item-last {
+	}
+	
+span.query-summary-variable {
+	font-weight: bold; }
