*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@793 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/assessment-estimates.css
+++ b/WebContent/styles/assessment-estimates.css
@@ -51,6 +51,12 @@ div.import-region-list div.checkbox-list-popup {
 	background-repeat: no-repeat;
 	left: 250px;
 	position: absolute; }
+	
+td.checkbox-list-select-deselect-all-label {
+	padding-right: 5px; }
+
+td.checkbox-list-select-all {
+	padding-right: 5px; }
 
 /***********************************
 * boxes in the left column
