*** empty log message ***
git-svn-id: https://svn.library.emory.edu/svn/slavevoyages/trunk@794 2440b244-9809-4ec7-bebd-234906d9abf5

--- a/WebContent/styles/resources-slaves-table.css
+++ b/WebContent/styles/resources-slaves-table.css
@@ -27,12 +27,12 @@ tr.grid-row-even td {
 tr.grid-row-last {
 	border-bottom-style: none; }
 	
-/*
+
 tr.grid-row-even:hover,
 tr.grid-row-odd:hover,
 tr.grid-row-last:hover {
-	background-color: #F7EAC7; }
-*/
+	background-color: #c6e7da; }
+
 
 table.multiline-attr-table {
 }
